Fixed nav & body overflow issue.

--- a/assets/css/_contact.scss
+++ b/assets/css/_contact.scss
@@ -4,8 +4,8 @@
 		justify-content: space-between;
 		flex-wrap: wrap;
 		width: 100%;
-		flex-direction: row;
-
+		margin: 0 !important;
+		padding: 0 5.2em;	
 	}
 
 	.contact__left, .contact__right {
